@@ -1,3 +1,6 @@
+- Improvement: Add method to AcademicTreasuryEvent, to calculate the registration tuition amount including other events that account for tuition [#UL-IGOT-1569]
+- Bug Fix: Mark reservation tax event target as accounted for tuition, if it will discount in registration tuition amount [#UL-IGOT-1569]
+
 11.3.6 (10-01-2024)
 - Improvement: Add finantial entity information in debt reports [#qubIT-Fenix-4794]
 
